restructed scss files into a directory called styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import './map.scss';
-@import './toggler.scss';
-@import './search.scss';
-@import './places-panel.scss';
+@import './styles/map.scss';
+@import './styles/toggler.scss';
+@import './styles/search.scss';
+@import './styles/places-panel.scss';
